Fix/ecma48 terminal code cleanup (#229)
* Upgrade `jlineVersion` to `4.4.5` and enhance mouse event handling for increased compatibility with Windows-native JLine backends.

* Fix review feedback for Windows-only SGR mouse hacks

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Strengthen SGR mouse regression assertions

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Fix mouse event collection helper

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Fix SGR release button tracking

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Tighten terminal review followups

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Treat SGR code 3 release without tracked button as hover motion

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Fixed (~95 warnings)
Immutability — made backend, eventQueue, readerThread, params, xtversionResponse, oscResponse, pasteText final. Because eventQueue is its own monitor, this also resolved all 6 "synchronization on a non-final field eventQueue" warnings at their root rather than suppressing them.
Two real bugs found along the way:
1.
ECMA48Terminal.java:1203 — getBytesPerSecond() (public API, used by DemoApplication) reported the byte count of a single frame, not the second's total. The bytesPerSecond accumulator was incremented but never read — that's exactly why IDEA flagged it as "assigned but never accessed". Now the rollover publishes the accumulated total and starts the new second with the current frame.
2.
run()'s IOException handler called e.printStackTrace() unconditionally — writing a stack trace to stderr while the alternate screen buffer is active corrupts the display. Now guarded by DEBUG_TO_STDERR like every other diagnostic in the file.
Thread-safety — synchronized (listener) read the volatile field twice (null-check, then lock), so a concurrent setListener() could leave the waite